glx/testdata/invalid/custom-vocab-edge-cases/vocabularies/event-properties.glx
event_properties:
  custom_event_prop:
    label: "Custom Event Property"
    value_type: string


